src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/division-by-zero.tessla
in x: Events[Int]
in y: Events[Int]

out (x / y) + 1